# Kolosal-server-play

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  README.md  kolosal.cpp  kolosal.h  main.cpp  quad_fragment_shader.glsl
.github/: FUNDING.yml
.github/workflows/: lint.yml
include/: common.hpp  config.hpp  system_monitor.hpp
include/chat/: chat_history.hpp  chat_manager.hpp  chat_observer.hpp  chat_persistence.hpp
include/crypto/: crypto.hpp
include/model/: model.hpp  model_loader_config_manager.hpp  model_manager.hpp  model_persistence.hpp  model_preset.hpp  preset.hpp  preset_manager.hpp  preset_observer.hpp  preset_persistence.hpp  server_state_manager.hpp
include/ui/: fonts.hpp  markdown.hpp  model_manager_modal.hpp  status_bar.hpp  tab_manager.hpp  title_bar.hpp  widgets.hpp
include/ui/chat/: chat_history.hpp  chat_history_sidebar.hpp  chat_section.hpp  chat_window.hpp  model_manager_modal.hpp  preset_sidebar.hpp
include/ui/server/: deployment_settings.hpp  server_logs.hpp
include/window/: gradient_background.hpp  graphics_context_factory.hpp  wgl_context.hpp  win32_window.hpp  window.hpp
installer/: script.nsi
models/: bahasa-ai-4b.json  deepseek-r1-distill-llama-8b.json  deepseek-r1-distill-qwen2.5-1.5b.json  deepseek-r1-distill-qwen2.5-14b.json  deepseek-r1-distill-qwen2.5-7b.json  deepseek-r1-llama-8b.json  deepseek-r1-qwen2.5-1.5b.json  deepseek-r1-qwen2.5-14b.json  deepseek-r1-qwen2.5-7b.json  gemma-2-2b.json  gemma-2-9b-sahabat.json  gemma-2-9b.json  gemma-3-12b.json  gemma-3-1b.json  gemma-3-27b.json  gemma-3-4b.json  llama-3-8b-sahabat.json  llama-3.1-8b.json  llama-3.2-1b.json  llama-3.2-3b.json  phi-4-14b.json  phi-4-mini-3.8b.json  qwen2.5-0.5b.json  qwen2.5-1.5b.json  qwen2.5-14b.json  qwen2.5-3b.json  qwen2.5-7b.json  qwen2.5-coder-0.5b.json  qwen2.5-coder-1.5b.json  qwen2.5-coder-14b.json  qwen2.5-coder-3b.json  qwen2.5-coder-7b.json
server-test/python/: openai_test.py  openai_test_2.py
server-test/python/RAG_test/: app.py
source/: main.cpp
tests/: CMakeLists.txt  kolosal_test.cpp
